--- a/singleton/pom.xml
+++ b/singleton/pom.xml
@@ -71,7 +71,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.mainClass>
-            com.github.caiobas.Builder.domain.Builder
+            com.github.caiobas.singleton.domain.singleton
         </project.mainClass>
 
         <tools.dir>${project.basedir}/tools</tools.dir>
